--- a/style.css
+++ b/style.css
@@ -65,7 +65,57 @@ body {
   padding: 10px;
 }
 
+button {
+  min-height: 50px;
+  font-size: 20px;
+  font-weight: 300;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background: rgb(199, 199, 199);
+  color: black;
+}
+
+button:hover {
+  filter: brightness(110%);
+}
+
+button:active {
+  transform: scale(0.95);
+}
+
+button:focus {
+  outline: none;
+}
+
+.operator {
+  background: rgb(160, 160, 160);
+  color: white;
+  font-size: 30px;
+}
+
+.clear {
+  background: rgb(255, 63, 63);
+  color: white;
+}
+
+.clear:hover {
+  filter: brightness(90%);
+}
+
 .equal-sign {
   grid-column: -2;
   grid-row: 2 / span 4;
+  background: rgb(13, 206, 87);
+}
+
+.equal-sign:active {
+  transform: scale(0.99);
+}
+
+/* Media query: Large smartphone (vertical) */
+@media screen and (max-width: 600px) {
+  .calculator {
+    width: 95%;
+  }
 }
