--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to bottom, #f12711, #f5af19);
+  background: linear-gradient(to bottom, #677dbb, #c5c21e);
 }
 
 .calculator {
